--- a/Course 3 - Advance Computer Vision/W1/assignment/C3W1_Assignment.ipynb
+++ b/Course 3 - Advance Computer Vision/W1/assignment/C3W1_Assignment.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/annishfa/streamlit_dashboard_bangkit2024/blob/main/Course%203%20-%20Advance%20Computer%20Vision/W1/assignment/C3W1_Assignment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "KsjDCIat6_UK"
       },
       "source": [
@@ -88,7 +98,7 @@
         "!pip install ml-dtypes==0.3.1"
       ],
       "metadata": {
-        "id": "ptowz-sN6359"
+        "id": "Az0sZ3xFh0VR"
       },
       "execution_count": null,
       "outputs": []
@@ -97,7 +107,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "4gUgePQc6apw"
+        "id": "udX7LaNng_Bc"
       },
       "outputs": [],
       "source": [
@@ -750,14 +760,17 @@
       "source": [
         "def feature_extractor(inputs):\n",
         "    ### YOUR CODE HERE ###\n",
+        "\n",
         "    # Create a mobilenet version 2 model object\n",
-        "    mobilenet_model = tf.keras.applications.MobileNetV2(\n",
-        "        input_shape=(224, 224, 3), include_top=False, weights='imagenet'\n",
-        "    )\n",
+        "    mobilenet_model = None\n",
+        "\n",
         "\n",
         "    # pass the inputs into this modle object to get a feature extractor for these inputs\n",
-        "    feature_extractor = mobilenet_model(inputs)\n",
+        "    feature_extractor = None\n",
+        "\n",
+        "\n",
         "    ### END CODE HERE ###\n",
+        "\n",
         "    # return the feature_extractor\n",
         "    return feature_extractor"
       ]
@@ -793,17 +806,19 @@
       "source": [
         "def dense_layers(features):\n",
         "    ### YOUR CODE HERE ###\n",
-        "    # global average pooling 2D layer.\n",
-        "    x = tf.keras.layers.GlobalAveragePooling2D()(features)\n",
+        "\n",
+        "    # global average pooling 2d layer\n",
+        "    x = None\n",
         "\n",
         "    # flatten layer\n",
-        "    x = tf.keras.layers.Flatten()(x)\n",
+        "    x = None\n",
         "\n",
         "    # 1024 Dense layer, with relu\n",
-        "    x = tf.keras.layers.Dense(1024, activation='relu')(x)\n",
+        "    x = None\n",
         "\n",
         "    # 512 Dense layer, with relu\n",
-        "    x = tf.keras.layers.Dense(512, activation='relu')(x)\n",
+        "    x = None\n",
+        "\n",
         "    ### END CODE HERE ###\n",
         "\n",
         "    return x"
@@ -836,9 +851,13 @@
       "source": [
         "def bounding_box_regression(x):\n",
         "    ### YOUR CODE HERE ###\n",
+        "\n",
         "    # Dense layer named `bounding_box`\n",
-        "    bounding_box_regression_output = tf.keras.layers.Dense(4, activation='linear', name='bounding_box')(x)\n",
+        "    bounding_box_regression_output = None\n",
+        "\n",
         "    ### END CODE HERE ###\n",
+        "\n",
+        "\n",
         "    return bounding_box_regression_output"
       ]
     },
@@ -871,18 +890,21 @@
       "source": [
         "def final_model(inputs):\n",
         "    ### YOUR CODE HERE ###\n",
+        "\n",
         "    # features\n",
-        "    feature_cnn = feature_extractor(inputs)\n",
+        "    feature_cnn = None\n",
         "\n",
         "    # dense layers\n",
-        "    last_dense_layer = dense_layers(feature_cnn)\n",
+        "    last_dense_layer = None\n",
         "\n",
         "    # bounding box\n",
-        "    bounding_box_output = bounding_box_regression(last_dense_layer)\n",
+        "    bounding_box_output = None\n",
         "\n",
         "    # define the TensorFlow Keras model using the inputs and outputs to your model\n",
-        "    model = tf.keras.Model(inputs=inputs, outputs=bounding_box_output)\n",
+        "    model = None\n",
+        "\n",
         "    ### END CODE HERE ###\n",
+        "\n",
         "\n",
         "    return model"
       ]
@@ -917,17 +939,19 @@
         "def define_and_compile_model():\n",
         "\n",
         "    ### YOUR CODE HERE ###\n",
+        "\n",
         "    # define the input layer\n",
-        "    inputs = tf.keras.layers.Input(shape=(224, 224, 3))\n",
+        "    inputs = None\n",
         "\n",
         "    # create the model\n",
-        "    model = final_model(inputs)\n",
+        "    model = None\n",
         "\n",
         "    # compile your model\n",
-        "    model.compile(optimizer=tf.keras.optimizers.SGD(momentum=0.9),\n",
-        "                  loss='mse',\n",
-        "                  metrics='acc')\n",
+        "    None\n",
+        "\n",
         "    ### END CODE HERE ###\n",
+        "\n",
+        "\n",
         "    return model"
       ]
     },
@@ -1019,24 +1043,22 @@
       },
       "outputs": [],
       "source": [
-        "import math\n",
-        "\n",
         "# You'll train 50 epochs\n",
         "EPOCHS = 50\n",
         "\n",
         "### START CODE HERE ###\n",
         "\n",
         "# Choose a batch size\n",
-        "BATCH_SIZE = 32\n",
+        "BATCH_SIZE = None\n",
         "\n",
         "# Get the length of the training set\n",
-        "length_of_training_dataset = len(visualization_training_dataset)\n",
+        "length_of_training_dataset = None\n",
         "\n",
         "# Get the length of the validation set\n",
-        "length_of_validation_dataset = len(visualization_validation_dataset)\n",
+        "length_of_validation_dataset = None\n",
         "\n",
         "# Get the steps per epoch (may be a few lines of code)\n",
-        "steps_per_epoch = math.ceil(length_of_training_dataset / BATCH_SIZE)\n",
+        "steps_per_epoch = None\n",
         "\n",
         "# get the validation steps (per epoch) (may be a few lines of code)\n",
         "validation_steps = length_of_validation_dataset//BATCH_SIZE\n",
@@ -1088,12 +1110,10 @@
       "outputs": [],
       "source": [
         "### YOUR CODE HERE ####\n",
+        "\n",
         "# Fit the model, setting the parameters noted in the instructions above.\n",
-        "history = model.fit(x=training_dataset,\n",
-        "                    steps_per_epoch=steps_per_epoch,\n",
-        "                    validation_data=validation_dataset,\n",
-        "                    validation_steps=validation_steps,\n",
-        "                    epochs=EPOCHS)\n",
+        "history = None\n",
+        "\n",
         "### END CODE HERE ###"
       ]
     },
@@ -1374,12 +1394,15 @@
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
     "colab": {
       "private_outputs": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3 (ipykernel)",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
